apps/services/chatgpt/local-ai/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-ai
  labels:
    app: local-ai
spec:
  selector:
    matchLabels:
      app: local-ai
  replicas: 1
  template:
    metadata:
      name: local-ai
      labels:
        app: local-ai
    spec:
      runtimeClassName: nvidia
      containers:
      - name: local-ai
        image: quay.io/go-skynet/local-ai:v1.20.0-cublas-cuda11-ffmpeg
        resources:
          limits:
            cpu: 4000m
            memory: 14Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
        - mountPath: /models
          name: models
      volumes:
      - name: models
        persistentVolumeClaim:
          claimName: localai-storage
      - name: prompt-templates
        configMap:
          name: local-ai-prompt-templates
