apps/services/chatgpt/local-ai/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-ai
  labels:
    app: local-ai
spec:
  selector:
    app: local-ai
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: local-ai-tailscale
  labels:
    app: local-ai
  annotations:
    tailscale.com/hostname: "openai"
spec:
  selector:
    app: local-ai
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
